# cu_ur5e

./: TODO.md
cu_ur5e_bringup/: CMakeLists.txt  package.xml
cu_ur5e_bringup/config/: default.rviz  ros_controllers.yaml  simulation_jsp.rviz
cu_ur5e_bringup/launch/: cam.launch  cam_elp.launch  hardware.launch  simulation_jsp.launch  simulation_moveit.launch
cu_ur5e_bringup/scriptpanel/: launch_hardware.sh  move_above_table_center.sh  move_randomly_in_grid.sh  move_to_home.sh  move_to_present_gripper.sh  move_to_ready.sh  resend_robot_program.sh  rqt_reconfigure.sh  scriptpanel.yaml  trajectory_controller.sh  twist_controller.sh
cu_ur5e_description/: CMakeLists.txt  TODO.md  package.xml
cu_ur5e_description/config/: joint_limits.yaml  kinematics_parameters.yaml
cu_ur5e_description/launch/: upload_description.launch
cu_ur5e_description/robots/: basic_setup.urdf.xacro
cu_ur5e_description/urdf/: arm.urdf  basic_setup.urdf.xacro  mounted_arm.urdf.xacro  table.urdf.xacro
cu_ur5e_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
cu_ur5e_moveit_config/config/: cu_ur5e.srdf  fake_controllers.yaml  gazebo_cu_ur5e.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
cu_ur5e_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  (+6 more)
