<?xml version="1.0"?>
<package format="2">
  <name>cu_ur5e_bringup</name>
  <version>0.0.0</version>
  <description>The cu_ur5e_bringup package</description>

  <maintainer email="robot@todo.todo">robot</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
